--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "just wanna try",
   "main": "index.js",
   "scripts": {
+    "start": "nodejs index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Miftah Afina",
